# AirHockey

./: .gitignore  CMakeLists.txt  README.md  package-lock.cmake
include/Communication/udp_client/: udp_client.h
include/Communication/udp_server/: udp_server.h
include/Textures/: login.h  menu.h  screen.h
include/Utils/: states.h  utils.h
internal/: CMakeLists.txt
internal/CMakeModules/: CCache.cmake  CPM.cmake
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/Communication/: CMakeLists.txt
src/Communication/udp_client/: CMakeLists.txt  udp_client.cpp
src/Communication/udp_server/: CMakeLists.txt  udp_server.cpp
src/Textures/: CMakeLists.txt  login.cpp  menu.cpp
src/Utils/: CMakeLists.txt  utils.cpp
test/: CMakeLists.txt
test/LoginPage/: CMakeLists.txt
test/MenuPage/: CMakeLists.txt  menu_page_test.cpp
test/RenderTest/: CMakeLists.txt  render_test.cpp
test/SDLTest/: CMakeLists.txt  SDL_TEST.cpp
test/Server/: CMakeLists.txt
test/client/: CMakeLists.txt  client.cpp
test/sdl_test/: SDL_TEST.cpp
test/server/: CMakeLists.txt  server.cpp
